bug overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,9 @@ body{
 li{
   list-style: none;
 }
-
+body{
+  overflow-x: hidden;
+}
 #root{
   display: flex;
   height: 100vh;
